# DaemonEye

./: .cargo-release.toml  .coderabbit.yaml  .coderabbitai.yaml  .editorconfig  .gitignore  .goreleaser-linux.yaml  .goreleaser-macos.yaml  .goreleaser-windows.yaml  .goreleaser.yaml  .markdownlint-cli2.jsonc  .markdownlint.json  .mdformat.toml  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CONCEPTS.md  Cargo.toml  GOTCHAS.md  README.md  SECURITY.md  SECURITY_AUDIT_2026-04-03.md  WARP.md  audit.toml  build.rs  codecov.yml  deny.toml  dist-workspace.toml  justfile  llms.txt  mise.toml  rust-toolchain.toml  tessl.json
collector-core/: Cargo.toml  README.md
collector-core/benches/: README.md  collector_benchmarks.rs  event_bus_benchmarks.rs  eventbus_comparison_benchmarks.rs
collector-core/docs/: busrt_integration_patterns.md  busrt_integration_summary.md  busrt_message_broker_architecture.md  busrt_research_summary.md  busrt_transport_selection_guide.md  busrt_transport_validation_summary.md  multi_collector_coordination.md
collector-core/examples/: README.md  busrt_api_test.rs  busrt_basic_example.rs  busrt_corrected_example.rs  busrt_integration_poc.rs  busrt_minimal_poc.rs  busrt_transport_validation.rs  trigger_emission_example.rs
collector-core/src/: analysis_chain.rs  binary_hasher.rs  busrt_client.rs  busrt_event_bus.rs  busrt_types.rs  capability_router.rs  collector.rs  config.rs  config_manager.rs  daemoneye_event_bus.rs  embedded_broker.rs  event.rs  event_bus.rs  health_monitor.rs  high_performance_event_bus.rs  high_performance_event_bus_old.rs  high_performance_event_bus_v2.rs  ipc.rs  ipc_busrt_bridge.rs  lib.rs  load_balancer.rs  monitor_collector.rs  performance.rs  process_manager.rs  result_aggregator.rs  rpc_services.rs  shutdown_coordinator.rs  source.rs  task_distributor.rs  trigger.rs  triggerable.rs
collector-core/tests/: README_eventbus_performance_comparison.md  analysis_chain_integration.rs  busrt_architecture_validation.rs  busrt_crossbeam_performance.rs  busrt_functionality_tests.rs  chaos_testing.rs  collector_daemoneye_integration.rs  compatibility_integration_test.rs  comprehensive_test_suite.rs  concurrent_lifecycle_test.rs  daemoneye_eventbus_integration.rs  daemoneye_eventbus_ipc_integration.rs  daemoneye_eventbus_monitoring_integration.rs  eventbus_migration_comparison.rs  eventbus_performance_comparison.rs  integration_test.rs  ipc_integration.rs  monitor_collector_comprehensive.rs  monitor_collector_edge_cases.rs  monitor_collector_performance_regression.rs  multi_collector_coordination.rs  performance_critical_test.rs  performance_tests.rs  property_based_test.proptest-regressions  property_based_test.rs  rpc_integration_tests.rs  rpc_server_integration.rs  security_critical_test.rs  security_isolation_test.rs  shared_infrastructure_test.rs  simple_daemoneye_test.rs  test_stack_overflow_debug.rs  trigger_emission_integration.rs
daemoneye-eventbus/: COMPREHENSIVE_REVIEW.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_CHECKLIST.md
daemoneye-eventbus/benches/: broker_inprocess_latency.rs  ipc_performance.rs  throughput.rs
daemoneye-eventbus/docs/: END-297-acceptance-evidence.md  correlation-metadata.md  integration-guide.md  message-schemas.md  process-management.md  rpc-patterns.md  task-distribution.md  topic-hierarchy-design.md  topic-hierarchy.md
daemoneye-eventbus/examples/: topic_hierarchy_demo.rs
daemoneye-eventbus/src/: broker.rs  client.rs  compatibility.rs  config_manager.rs  correlation.rs  error.rs  lib.rs  message.rs  process_manager.rs  queue_manager.rs  rate_limiter.rs  result_aggregation.rs  rpc.rs  task_distribution.rs  topic.rs  topics.rs  transport.rs
daemoneye-eventbus/tests/: correlation_metadata_tests.rs  correlation_tracker_tests.rs  e2e_multi_collector.rs  freebsd_compatibility.rs  integration_tests.rs  pattern_truth_table.rs  process_manager_tests.rs  result_aggregation_integration.rs  rpc_integration_tests.rs  task_distribution_integration.rs
daemoneye-lib/: Cargo.toml
daemoneye-lib/benches/: alert_processing.rs  cryptographic_operations.rs  database_operations.rs  detection_engine.rs  integrity_operations.rs  ipc_client_validation_benchmarks.rs  ipc_communication.rs  ipc_performance_comprehensive.rs  process_collection.rs
daemoneye-lib/docs/: ipc_client_validation.md
daemoneye-lib/examples/: advanced_ipc_client.rs
daemoneye-lib/proto/: common.proto  eventbus.proto  ipc.proto
daemoneye-lib/src/: alerting.rs  collection.rs  config.rs  crypto.rs  detection.rs  integrity.rs  kernel.rs  lib.rs  network.rs  proto.rs  storage.rs  telemetry.rs
daemoneye-lib/tests/: ipc_capability_negotiation.rs  ipc_client_comprehensive_validation.rs  ipc_comprehensive_integration.rs  ipc_cross_platform_tests.rs  ipc_integration.rs  ipc_property_based_tests.rs  ipc_security_validation.rs  protobuf_multi_domain_tests.rs  resilient_client_integration.rs  run_ipc_client_validation.rs
procmond/: Cargo.toml  TESTING.md
procmond/benches/: bench_helpers.rs  eventbus_benchmarks.rs  performance_benchmarks.rs  process_collector_benchmarks.rs  serialization_benchmarks.rs  system_benchmarks.rs  wal_benchmarks.rs
procmond/docs/: macos-features.md
procmond/examples/: process_collector_usage.rs
procmond/src/: event_bus_connector.rs  event_source.rs  freebsd_collector.rs  hash_pass.rs  lib.rs  lifecycle.rs  linux_collector.rs  macos_collector.rs  main.rs  monitor_collector.rs  process_collector.rs  registration.rs  rpc_service.rs  security.rs  wal.rs  windows_collector.rs
procmond/tests/: actor_mode_integration_tests.rs  chaos_tests.rs  cli.rs  cross_platform_integration_tests.rs  cross_platform_tests.rs  event_bus_integration_tests.rs  hash_composition.rs  integration_tests.rs  ipc.rs  lifecycle_integration_tests.rs  lifecycle_tracking_tests.rs  linux_integration_tests.rs  load_tests.rs  macos_enhanced_integration_tests.rs  macos_integration_tests.rs  (+8 more)
sentinel/: Cargo.toml  README.md
sentinel-lib/: Cargo.toml  build.rs
sentinelagent/: Cargo.toml
sentinelcli/: Cargo.toml
(+386 files in other folders)
