
# SentinelD Workspace Root
# This file defines the workspace and shared dependencies

[workspace]
members = ["procmond", "sentinel-lib", "sentinelagent", "sentinelcli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["UncleSp1d3r", "Krypdo3"]
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/EvilBit-Labs/SentinelD"
homepage = "https://evilbitlabs.io/sentineld"

# Overpinning the versions is breaking the cross-platform functionality, so we are limiting pinning to minor versions.
[workspace.dependencies]
# Core error handling and utilities
anyhow = "1.0"

# Testing
assert_cmd = "2.0"

# Async traits
async-trait = "0.1"

# Binary serialization
bincode = "2.0"

# Cryptographic hashing
blake3 = "1.8"
bytes = "1.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# CRC32 checksum
crc32fast = "1.4"
criterion = "0.7"
futures = "0.3"

# IPC communication
interprocess = { version = "2.2", features = ["tokio"] }
predicates = "3.1"
proptest = "1.7"

# Protocol Buffers
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"

# Database
redb = "3.0"

# Internal library
sentinel-lib = { path = "sentinel-lib" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# SQL parsing
sqlparser = "0.58"

# System information
sysinfo = "0.37"

# Temporary files
tempfile = "3.22"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "process",
    "macros",
    "sync",
    "fs",
    "signal",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID support
uuid = { version = "1.18", features = ["v4", "serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
