# DaemonEye Workspace Root
# This file defines the workspace and shared dependencies

[workspace]
members = [
    "collector-core",
    "daemoneye-agent",
    "daemoneye-cli",
    "daemoneye-eventbus",
    "daemoneye-lib",
    "procmond",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = [
    "UncleSp1d3r <unclespid3r@evilbitlabs.io>",
    "KryptoKat <kryptokat@evilbitlabs.io>",
]
license = "Apache-2.0"
keywords = ["security", "monitoring", "process", "detection"]
categories = ["security"]
rust-version = "1.91"
repository = "https://github.com/EvilBit-Labs/DaemonEye"
homepage = "https://evilbitlabs.io/DaemonEye"
edition = "2024"
readme = "README.md"
exclude = [
    "/spec",
    "/docs",
    ".",
    "/.kiro",
    "/.cursor",
    "/.vscode",
    "/.github",
    "/.git",
    "/.env.*",
    "*.orig",
]

[workspace.dependencies]
# Core error handling and utilities
anyhow = "1.0.100"

# Testing and development
assert_cmd = "2.1.2"

# Async runtime and traits
async-trait = "0.1.89"
bitflags = { version = "2.10.0", features = ["serde"] }

# Cryptographic operations
blake3 = "1.8.3"

# Buffer and byte utilities
bytes = "1.11.1"

# Date/time and utilities
chrono = { version = "0.4.43", features = ["serde"] }

# CLI and configuration
clap = { version = "4.5.56", features = ["derive"] }

# Internal libraries
collector-core = { path = "collector-core" }

# CRC checksums
crc32c = "0.6.8"
criterion = "0.8.1"

# High-performance concurrent data structures
crossbeam = "0.8.4"
daemoneye-eventbus = { path = "daemoneye-eventbus" }
daemoneye-lib = { path = "daemoneye-lib" }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "json", "env"] }
futures = "0.3.31"
futures-util = "0.3.31"

# System information and IPC
hostname-validator = "1.1.1"
insta = { version = "1.46.2", features = ["filters"] }
interprocess = { version = "2.2.3", features = ["tokio"] }
parking_lot = "0.12.5"

# Serialization
postcard = { version = "1.1.3", features = ["alloc"] }

# Testing utilities
predicates = "3.1.3"
proptest = "1.9.0"

# Protocol Buffers
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
rand = "0.9.2"

# Database and storage
redb = "3.1.0"
regex = "1.12.2"
rs_merkle = "1.5.0"

# Platform-specific dependencies
# macOS
security-framework = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlparser = "0.60.0"

sysinfo = "0.38.0"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "process",
    "macros",
    "sync",
    "fs",
    "signal",
] }
tokio-test = "0.4.5"
toml = "0.9.8"

# Logging and observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.5"
unidirs = "0.1.2"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
uzers = "0.12.2"
whoami = "2.1.0"

# Windows
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
windows-service = "0.8.0"
winreg = "0.55.0"

# Workspace lint configuration
[workspace.lints.rust]
# Security: Forbid unsafe code globally
unsafe_code = "forbid"
# Zero warnings policy
warnings = "deny"

[workspace.lints.clippy]
# Pedantic clippy configuration with proper priorities
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Security-focused linting
as_conversions = "warn"
as_ptr_cast_mut = "warn"
cast_ptr_alignment = "warn"
float_cmp = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
integer_division = "warn"
modulo_arithmetic = "warn"
expect_used = "warn"

# Security anti-patterns
# allow_attributes = "warn" # I think we need them for test and benchmarks
dbg_macro = "warn"
print_stdout = "warn" # Allowed per-use only with a specific annotation and justification
# print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
panic = "deny"          # DON'T PANIC IN PRODUCTION (it would be forbidden, but it breaks clap for some reason, so just don't do it)
unwrap_used = "deny"      # DON'T UNWRAP IN PRODUCTION
exhaustive_enums = "warn"

# Performance and correctness
perf = { level = "warn", priority = -1 }
await_holding_lock = "deny"
clone_on_ref_ptr = "warn"
create_dir = "warn"
exit = "warn"
filetype_is_file = "warn"
float_equality_without_abs = "warn"
if_then_some_else_none = "warn"
# invalid_from_utf8_unchecked = "warn"  # Not available in clippy
large_stack_arrays = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
match_same_arms = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "allow"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_ascii_literal = "warn"
non_send_fields_in_send_ty = "warn"
partial_pub_fields = "warn"
pattern_type_mismatch = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_binding_to_reference = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
semicolon_outside_block = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_slice = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
undocumented_unsafe_blocks = "deny" # We should not have unsafe code in this project, but if we do, we should document it
unnecessary_self_imports = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
zero_sized_map_values = "warn"

# Allow specific lints that are too noisy for this project; each of these will get set to warn/deny at some point
missing_errors_doc = "allow"
missing_panics_doc = "allow"       # TODO: Revisit this
must_use_candidate = "allow"       # TODO: Revisit this
cast_possible_truncation = "allow" # TODO: Revisit this
cast_precision_loss = "allow"      # TODO: Revisit this
cast_sign_loss = "allow"           # TODO: Revisit this
module_name_repetitions = "allow"  # TODO: Revisit this
similar_names = "allow"            # TODO: Revisit this
too_many_lines = "allow"           # TODO: Revisit this
type_complexity = "allow"          # TODO: Revisit this
async_yields_async = "allow"       # TODO: Revisit this
large_futures = "allow"            # TODO: Revisit this
result_large_err = "allow"         # TODO: Revisit this
cargo_common_metadata = "allow"    # TODO: Revisit this
multiple_crate_versions = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1
