[package]
name = "collector-core"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
description = "Extensible collection framework for DaemonEye monitoring components"
publish = true
exclude.workspace = true
readme = "README.md"


[dependencies]
chrono = { workspace = true, features = ["serde"] }
# Core async runtime and utilities
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Bitflags for capabilities
bitflags = { workspace = true }

# Message broker for IPC
busrt = { workspace = true }

# IPC integration
daemoneye-lib = { path = "../daemoneye-lib" }

# Temporary file handling
tempfile = { workspace = true }

# UUID generation
uuid = { workspace = true }

# SQL parsing for trigger conditions
sqlparser = "0.59.0"

# High-performance concurrent data structures
crossbeam = { workspace = true }
parking_lot = { workspace = true }

# Base64 encoding for message payloads
base64 = "0.22.1"

# Regular expressions for topic pattern matching
regex = "1.11.1"

# MD5 hashing for configuration checksums
md5 = "0.7.0"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
proptest = "1.8.0"
rand = "0.9.2"
criterion = { workspace = true, features = ["html_reports"] }
tracing-subscriber = { workspace = true }
bincode = "2.0.1"
futures = { workspace = true }
anyhow = { workspace = true }

[[bench]]
name = "collector_benchmarks"
harness = false
