[package]
name = "collector-core"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
description = "Extensible collection framework for DaemonEye monitoring components"
publish = true
exclude.workspace = true
readme = "README.md"

[features]
default = []
busrt = []

[dependencies]

# Error handling
anyhow = { workspace = true }
async-trait = { workspace = true }

# Base64 encoding for message payloads
base64 = { workspace = true }

# Bitflags for capabilities
bitflags = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# High-performance concurrent data structures
crossbeam = { workspace = true }
daemoneye-eventbus = { path = "../daemoneye-eventbus" }
# Message broker for IPC (disabled during migration away from busrt)
# busrt = { workspace = true }

# IPC integration
daemoneye-lib = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }

# MD5 hashing for configuration checksums
md5 = { workspace = true }
parking_lot = { workspace = true }

# Regular expressions for topic pattern matching
regex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SQL parsing for trigger conditions
sqlparser = { workspace = true }

# Temporary file handling
tempfile = { workspace = true }
thiserror = { workspace = true }
# Core async runtime and utilities
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

# Logging
tracing = { workspace = true }

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
futures = { workspace = true }
proptest = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "collector_benchmarks"
harness = false

[[bench]]
name = "eventbus_comparison_benchmarks"
harness = false
