[package]
name = "collector-core"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
description = "Extensible collection framework for DaemonEye monitoring components"
publish = true
exclude.workspace = true
readme = "README.md"

[features]
default = []
eventbus-integration = []

[dependencies]

# Error handling
anyhow = { workspace = true }
async-trait = { workspace = true }

# Binary serialization
postcard = { workspace = true }

# Bitflags for capabilities
bitflags = { workspace = true }

# High-performance concurrent data structures
crossbeam = { workspace = true }

# Event bus integration
daemoneye-eventbus = { workspace = true }

# Hostname validation (RFC 1123)
hostname-validator = { workspace = true }

# IPC integration
daemoneye-lib = { workspace = true }
futures = { workspace = true }

parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SQL parsing for trigger conditions
sqlparser = { workspace = true }

# Temporary file handling
tempfile = { workspace = true }
thiserror = { workspace = true }
# Core async runtime and utilities
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

# Logging
tracing = { workspace = true }

# Random number generation
rand = { workspace = true }

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
postcard = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
daemoneye-eventbus = { workspace = true }
futures = { workspace = true }
proptest = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "collector_benchmarks"
harness = false
