[package]
name = "daemoneye-eventbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cross-platform IPC event bus for DaemonEye monitoring system"
license.workspace = true
repository.workspace = true
keywords = ["ipc", "eventbus", "pubsub", "monitoring", "cross-platform"]
categories = [
    "asynchronous",
    "network-programming",
    "os::unix-apis",
    "os::windows-apis",
]

[lib]
name = "daemoneye_eventbus"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
interprocess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["yaml"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "throughput"
harness = false
