[package]
name = "daemoneye-eventbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cross-platform IPC event bus for DaemonEye monitoring system"
license.workspace = true
repository.workspace = true
keywords = ["ipc", "eventbus", "pubsub", "monitoring", "cross-platform"]
categories = [
    "asynchronous",
    "network-programming",
    "os::unix-apis",
    "os::windows-apis",
]

[lib]
name = "daemoneye_eventbus"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
interprocess = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
    "process",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

[features]
default = ["cross-platform"]
cross-platform = ["interprocess"]
freebsd = []
high-load = ["tokio/rt-multi-thread"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
nix = { version = "0.30.1", features = ["socket"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["yaml"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "ipc_performance"
harness = false
