[package]
name = "daemoneye-lib"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared library for DaemonEye common functionality"
publish = false
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
readme.workspace = true

[package.metadata.cargo-machete]
ignored = ["anyhow", "tracing"]

[lib]
bench = true

# Feature flags
[features]
default = ["process-collection", "detection-engine", "alerting", "ipc"]

# Component features
process-collection = []
detection-engine = ["sqlparser"]
alerting = []
kernel-monitoring = []
network-correlation = []

# IPC transport features
ipc = [] # Use interprocess transport (cross-platform)

[dependencies]
anyhow = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Cryptographic hashing
blake3 = { workspace = true }
bytes = { workspace = true }

# Date/time handling
chrono = { workspace = true }
crc32c = { workspace = true }

# Configuration management
dirs = { workspace = true }
figment = { workspace = true }
unidirs = { workspace = true }

# Futures utilities
futures = { workspace = true }
futures-util = { workspace = true }

# IPC communication
interprocess = { workspace = true }

# Protocol Buffers support
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }

# Database
redb = { workspace = true }
rs_merkle = { workspace = true }
# Core dependencies used by all components
serde = { workspace = true }

# Serialization
serde_json = { workspace = true }
sha2 = { workspace = true }

# SQL parsing and validation
sqlparser = { workspace = true, optional = true }

# System information
sysinfo = { workspace = true }

# Additional dependencies
tempfile = { workspace = true }
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

# UUID support
uuid = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
criterion = { workspace = true }
predicates = { workspace = true }
proptest = { workspace = true }

# Inherit workspace lint configuration
[lints]
workspace = true

# Benchmark configurations
[[bench]]
name = "process_collection"
harness = false

[[bench]]
name = "database_operations"
harness = false

[[bench]]
name = "detection_engine"
harness = false

[[bench]]
name = "ipc_communication"
harness = false

[[bench]]
name = "alert_processing"
harness = false

[[bench]]
name = "cryptographic_operations"
harness = false

[[bench]]
name = "ipc_performance_comprehensive"
harness = false

[[bench]]
name = "ipc_client_validation_benchmarks"
harness = false
