[package]
name = "procmond"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DaemonEye Process Monitoring Daemon"
publish = true

[package.metadata.wix]
upgrade-guid = "C3B17B71-0443-4060-A962-D4D4F88CC2A2"
path-guid = "9011B6A9-5EF9-4CC3-9A4F-CA09D5C987C2"
license = false
eula = false

[lib]
name = "procmond"
path = "src/lib.rs"

[[bin]]
name = "procmond"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

# IPC communication
interprocess = { workspace = true }
crc32c = { workspace = true }

# Protocol Buffers
prost = { workspace = true }
prost-types = { workspace = true }

# Database
redb = { workspace = true }

# Internal libraries
collector-core = { workspace = true }
daemoneye-lib = { workspace = true }
serde = { workspace = true }

# System information
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# macOS Security Framework and Core Foundation
security-framework = "3.5.0"
core-foundation = "0.10.1"
# Note: procfs removed as it's Linux-specific and not compatible with macOS
# Using sysinfo for cross-platform process information instead

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies using third-party crates
# Enhanced sysinfo is already included in main dependencies
# windows-rs for safe Windows API bindings
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Performance",
] }
# windows-service for Windows service detection and management
windows-service = "0.7.0"
# winreg for safe Windows registry access
winreg = "0.52.0"
# Additional process utilities for Windows
# Note: psutil-rs and perfmon-rs would be added here when available
# For now, we use sysinfo + windows-rs for comprehensive Windows process monitoring

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
tracing-test = "0.2"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
